@@ -1,3 +1,6 @@
+2020/02/02  0.3.0   bugfix to chunker remove memory leak
+                    add creatPartial / getPartial
+
 2020/01/16  0.2.1   added replaceAll to utils
 
 2019/12/02  0.1.0   added static functions hookLoop / runHooks for fwd compatibilty with
